098_bst_map/grade.txt
Grading at 11/09/2021:04:08:36.887056
For commit ID cfaf0b029e94d0934392a003816c448893d8ca4f
Grading at Mon Nov  8 23:08:31 EST 2021
-----------------------------------------------
testcase 1 : Testing with BstMap<int,int>
...compiling...
The code compiled.
  - Valgrind was clean (no errors, no memory leaks)
Line_78_did_not_match
Line_91_did_not_match
Line_106_did_not_match
Line_119_did_not_match
Line_134_did_not_match
Your file did not match the expected output
Testcase failed 
-----------------------------------------------
testcase 2 : Testing with BstMap<int,std::string>
...compiling...
The code compiled.
  - Valgrind was clean (no errors, no memory leaks)
Line_78_did_not_match
Line_91_did_not_match
Line_106_did_not_match
Line_119_did_not_match
Line_134_did_not_match
Your file did not match the expected output
Testcase failed 
-----------------------------------------------
testcase 3 : Testing with BstMap<int,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = int; V = Tester]’:
89-tester.cpp:197:1:   required from here
bstmap.h:79:25: error: no match for ‘operator=’ (operand types are ‘Tester’ and ‘int’)
           (*cur)->value = (*replace)->key;
           ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
89-tester.cpp:6:7: note: candidate: Tester& Tester::operator=(const Tester&)
 class Tester{
       ^~~~~~
89-tester.cpp:6:7: note:   no known conversion for argument 1 from ‘int’ to ‘const Tester&’
The code did not compile.  This test failed.
-----------------------------------------------
testcase 4 : Testing with BstMap<std::string,int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = std::__cxx11::basic_string<char>; V = int]’:
89-tester.cpp:197:1:   required from here
bstmap.h:79:25: error: cannot convert ‘std::__cxx11::basic_string<char>’ to ‘int’ in assignment
           (*cur)->value = (*replace)->key;
           ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 5 : Testing with BstMap<std::string,std::string>
...compiling...
The code compiled.
  - Valgrind was clean (no errors, no memory leaks)
Line_126_did_not_match
Line_127_did_not_match
Line_130_did_not_match
Line_131_did_not_match
Line_134_did_not_match
Your file did not match the expected output
Testcase failed 
-----------------------------------------------
testcase 6 : Testing with BstMap<std::string,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = std::__cxx11::basic_string<char>; V = Tester]’:
89-tester.cpp:197:1:   required from here
bstmap.h:79:25: error: no match for ‘operator=’ (operand types are ‘Tester’ and ‘std::__cxx11::basic_string<char>’)
           (*cur)->value = (*replace)->key;
           ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
89-tester.cpp:6:7: note: candidate: Tester& Tester::operator=(const Tester&)
 class Tester{
       ^~~~~~
89-tester.cpp:6:7: note:   no known conversion for argument 1 from ‘std::__cxx11::basic_string<char>’ to ‘const Tester&’
The code did not compile.  This test failed.
-----------------------------------------------
testcase 7 : Testing with BstMap<(a custom class we wrote),int>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = Tester; V = int]’:
89-tester.cpp:197:1:   required from here
bstmap.h:79:25: error: cannot convert ‘Tester’ to ‘int’ in assignment
           (*cur)->value = (*replace)->key;
           ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
The code did not compile.  This test failed.
-----------------------------------------------
testcase 8 : Testing with BstMap<(a custom class we wrote),std::string>
...compiling...
In file included from 89-tester.cpp:1:0:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = Tester; V = std::__cxx11::basic_string<char>]’:
89-tester.cpp:197:1:   required from here
bstmap.h:79:25: error: no match for ‘operator=’ (operand types are ‘std::__cxx11::basic_string<char>’ and ‘Tester’)
           (*cur)->value = (*replace)->key;
           ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~
In file included from /usr/include/c++/7/string:52:0,
                 from /usr/include/c++/7/bits/locale_classes.h:40,
                 from /usr/include/c++/7/bits/ios_base.h:41,
                 from /usr/include/c++/7/ios:42,
                 from /usr/include/c++/7/ostream:38,
                 from /usr/include/c++/7/iostream:39,
                 from bstmap.h:3,
                 from 89-tester.cpp:1:
/usr/include/c++/7/bits/basic_string.h:654:7: note: candidate: std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator=(const std::__cxx11::basic_string<_CharT, _Traits, _Alloc>&) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]
       operator=(const basic_string& __str)
       ^~~~~~~~
/usr/include/c++/7/bits/basic_string.h:654:7: note:   no known conversion for argument 1 from ‘Tester’ to ‘const std::__cxx11::basic_string<char>&’
/usr/include/c++/7/bits/basic_string.h:693:7: note: candidate: std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator=(const _CharT*) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]
       operator=(const _CharT* __s)
       ^~~~~~~~
/usr/include/c++/7/bits/basic_string.h:693:7: note:   no known conversion for argument 1 from ‘Tester’ to ‘const char*’
/usr/include/c++/7/bits/basic_string.h:704:7: note: candidate: std::__cxx11::basic_string<_CharT, _Traits, _Alloc>& std::__cxx11::basic_string<_CharT, _Traits, _Alloc>::operator=(_CharT) [with _CharT = char; _Traits = std::char_traits<char>; _Alloc = std::allocator<char>]
       operator=(_CharT __c)
       ^~~~~~~~
/usr/include/c++/7/bits/basic_string.h:704:7: note:   no known conversion for argument 1 from ‘Tester’ to ‘char’
The code did not compile.  This test failed.
-----------------------------------------------
testcase 9 : Testing with BstMap<(a custom class we wrote),(a custom class we wrote)>
...compiling...
The code compiled.
  - Valgrind was clean (no errors, no memory leaks)
Line_78_did_not_match
Line_91_did_not_match
Line_106_did_not_match
Line_119_did_not_match
Line_134_did_not_match
Your file did not match the expected output
Testcase failed 

Overall Grade: F
